{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 49,
  "lineage": "8156cb4a-83c4-1f1d-03e5-f4d08ad8bc3e",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "34.98.86.232",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2025-11-12T23:49:01.880-08:00",
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "id": "projects/development-30af/global/addresses/afrisend",
            "label_fingerprint": "vezUS-42LLM=",
            "name": "afrisend",
            "prefix_length": 0,
            "project": "development-30af",
            "self_link": "https://www.googleapis.com/compute/v1/projects/development-30af/global/addresses/afrisend",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_storage_bucket_object_content.application_service_values",
            "data.google_storage_bucket_objects.application_services",
            "data.terraform_remote_state.core"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "kYBpVESr_-M=",
            "id": "projects/development-30af/global/securityPolicies/afrisend",
            "name": "afrisend",
            "project": "development-30af",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Allow custom CIDR ranges",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "197.232.33.60/32",
                          "197.248.97.137/32",
                          "3.109.39.95/32",
                          "34.22.227.147/32",
                          "41.139.128.197/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Default deny rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/development-30af/global/securityPolicies/afrisend",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.terraform_remote_state.core",
            "data.terraform_remote_state.management"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_security_policy",
      "name": "restricted_services",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "gateway",
          "schema_version": 0,
          "attributes": {
            "adaptive_protection_config": [],
            "advanced_options_config": [],
            "description": "",
            "fingerprint": "GzlE8lEb11w=",
            "id": "projects/development-30af/global/securityPolicies/afrisend-gateway",
            "name": "afrisend-gateway",
            "project": "development-30af",
            "recaptcha_options_config": [],
            "rule": [
              {
                "action": "allow",
                "description": "Allow codepoint CIDR ranges",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "168.187.187.82/32",
                          "168.187.217.69/32",
                          "62.215.161.67/32",
                          "62.215.31.11/32",
                          "62.215.31.13/32",
                          "62.215.31.5/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 3,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "allow",
                "description": "Allow codepoint_dev CIDR ranges",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "117.221.70.75/32",
                          "202.164.154.212/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 4,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "allow",
                "description": "Allow codepoint_uat CIDR ranges",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "3.109.39.95/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 5,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "allow",
                "description": "Allow custom CIDR ranges",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "197.232.33.60/32",
                          "197.248.97.137/32",
                          "3.109.39.95/32",
                          "34.22.227.147/32",
                          "41.139.128.197/32"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2,
                "rate_limit_options": [],
                "redirect_options": []
              },
              {
                "action": "deny(403)",
                "description": "Default deny rule",
                "header_action": [],
                "match": [
                  {
                    "config": [
                      {
                        "src_ip_ranges": [
                          "*"
                        ]
                      }
                    ],
                    "expr": [],
                    "expr_options": [],
                    "versioned_expr": "SRC_IPS_V1"
                  }
                ],
                "preconfigured_waf_config": [],
                "preview": false,
                "priority": 2147483647,
                "rate_limit_options": [],
                "redirect_options": []
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/development-30af/global/securityPolicies/afrisend-gateway",
            "timeouts": null,
            "type": "CLOUD_ARMOR"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.google_storage_bucket_object_content.application_service_values",
            "data.google_storage_bucket_objects.application_services",
            "data.terraform_remote_state.core",
            "data.terraform_remote_state.management"
          ]
        }
      ]
    }
  ]
}